--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -205,6 +205,11 @@
             <artifactId>admin-gui-es-ES</artifactId>
             <version>3.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.gui</groupId>
+            <artifactId>admin-gui-cs</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
         <!-- JDBC DRIVERS -->
         <dependency>
