--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageMyPasswords.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageMyPasswords.properties
@@ -19,6 +19,7 @@ PageMyPasswords.accounts=Accounts
 PageMyPasswords.resourceName=Resource
 PageMyPasswords.couldntResolve=Couldn't resolve resource.
 PageMyPasswords.password=Password
+PageMyPasswords.password2=Password again
 PageMyPasswords.button.save=Save
 PageMyPasswords.button.back=Back
 PageMyPasswords.name=Name
